05-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: asia-southeast1-docker.pkg.dev/todo-devops-500719/todo-repo/auth-service:43394d78de495651f451ca4d3a7c9c59dedd3858
          ports:
            - containerPort: 3100
              name: gin
            - containerPort: 3101
              name: grpc
          resources:
            requests:
              cpu: 5m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /ping
              port: 3100
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 3100
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: todo-app
spec:
  ports:
    - port: 3100
      targetPort: 3100
      name: gin
    - port: 3101
      targetPort: 3101
      name: grpc
  selector:
    app: auth-service
