06-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: asia-southeast1-docker.pkg.dev/todo-devops-500719/todo-repo/profile-service:43394d78de495651f451ca4d3a7c9c59dedd3858
          ports:
            - containerPort: 3200
              name: gin
            - containerPort: 3201
              name: grpc
          resources:
            requests:
              cpu: 5m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /ping
              port: 3200
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 3200
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: todo-app
spec:
  ports:
    - port: 3200
      targetPort: 3200
      name: gin
    - port: 3201
      targetPort: 3201
      name: grpc
  selector:
    app: user-service
