07-task-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: asia-southeast1-docker.pkg.dev/todo-devops-500719/todo-repo/task-service:43394d78de495651f451ca4d3a7c9c59dedd3858
          ports:
            - containerPort: 3300
              name: gin
          resources:
            requests:
              cpu: 5m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /ping
              port: 3300
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 3300
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: todo-app
spec:
  ports:
    - port: 3300
      targetPort: 3300
      name: gin
  selector:
    app: task-service
