09-todo-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-fe
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-fe
  template:
    metadata:
      labels:
        app: todo-fe
    spec:
      containers:
        - name: todo-fe
          image: asia-southeast1-docker.pkg.dev/todo-devops-500719/todo-repo/todo-fe:4e8bf62cd1d4c2cef7033a96b4f50b2eea7d8b23
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: todo-fe
  namespace: todo-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: todo-fe
