10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-app
  annotations:
    kubernetes.io/ingress.class: "gce"
    # ingress.kubernetes.io/ssl-redirect: "false" # Disabled for HTTP testing
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          # API Gateway Routing
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /user/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /tasks/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          # React Frontend Routing
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: todo-fe
                port:
                  number: 80
